--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -84,6 +84,11 @@
 						</path>
 						<!-- other annotation processors -->
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<compilerArg>
+							-Amapstruct.defaultComponentModel=spring
+						</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
